# Ataraxia

./: .gitmodules  CMakeLists.txt  Makefile  README.md
Core/: CMakeLists.txt
Core/include/: Application.h  Image.h  Random.h  Timer.h  main.h
Core/include/input/: Input.h  KeyCodes.h
Core/src/: Application.cpp  Image.cpp
Engine/: CMakeLists.txt
Engine/include/: BRDF.h  Camera.h  DeviceCamera.h  DeviceMemory.h  Renderer.h  Scene.h  SceneNode.h  Utils.h
Engine/src/: BRDF.cu  Camera.cpp  Renderer.cu  SceneNode.cpp  Utils.cpp  main.cpp
Scripts/: build.bat  build.py  dependencies.bat  dependencies.py  setup.py  utils.py
include/: main.h
sample-scene-data/: imgui.ini  scene.json
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  DeviceCamera.h  Image.cpp  Image.h  Random.cu  Random.h  Renderer.cu  Renderer.h  Scene.h  main  main.cpp  main.cu  main.h
src/imgui/: imguiBuild.cpp
src/input/: Input.cpp  Input.h  KeyCodes.h
src/vec/: Vec2.h  Vec3.h  Vec4.h
